adding user photo upload and download endpoint