@@ -1,5 +1,6 @@
 package raze.spring.inventory.service.impl;
 
+import com.google.common.io.Files;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.core.io.Resource;
 import org.springframework.core.io.UrlResource;
@@ -7,7 +8,6 @@ import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
-import org.springframework.util.StringUtils;
 import org.springframework.web.multipart.MultipartFile;
 import raze.spring.inventory.converter.UserProfileDtoToUserProfile;
 import raze.spring.inventory.converter.UserProfileToUserProfileDto;
@@ -21,7 +21,9 @@ import raze.spring.inventory.utility.FileUploadUtil;
 import javax.transaction.Transactional;
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.NoSuchElementException;
 import java.util.Objects;
 import java.util.UUID;
@@ -50,9 +52,11 @@ public class UserProfileServiceImpl implements UserProfileService {
 
     @Override
     public Resource getUserPhoto(String username) throws MalformedURLException {
-        final Path path = Path.of("user-photos/");
-        Path filePath = path.resolve(username).normalize();
-        Resource resource = new UrlResource(filePath.toUri());
+//        final Path path = Paths.get("user-photos/").toAbsolutePath().normalize();
+        final UserProfile profile = this.userProfileRepository.findByAccountUsername(username).orElseThrow();
+        log.debug("USER PHOTO PATH: {}",profile.getPhotoPath());
+    //        Path filePath = path.resolve(profile.getPhotoPath()).normalize();
+    Resource resource = new UrlResource(Paths.get(profile.getPhotoPath()).toAbsolutePath().toUri());
         if(resource.exists()) return resource;
         else throw new MalformedURLException();
     }
@@ -86,7 +90,7 @@ public class UserProfileServiceImpl implements UserProfileService {
         MultipartFile file = userProfileDto.getFile();
         if(file != null){
 //            String fileName = StringUtils.cleanPath(file.getResource());
-            String fileName = userProfileDto.getUsername();
+            String fileName = userProfileDto.getUsername()+ "." + Files.getFileExtension(file.getResource().getFilename());
             String uploadDir = "user-photos/" ;
             FileUploadUtil.saveFile(uploadDir, fileName, file);
             profileToEdit.setPhotoPath(uploadDir + fileName);
